name:                papergrep
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/agrafix/papergrep#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann
maintainer:          mail@athiemann.net
copyright:           2017 Alexander Thiemann <mail@athiemann.net>
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PG.Import
                     , PG.Search
                     , PG.Types
  build-depends:       base >= 4.7 && < 5
                     , text
                     , vector
                     , strict-data
                     , bytestring
                     , conduit
                     , resourcet
                     , xml-conduit
                     , xml-types
                     , exceptions
                     , full-text-search
                     , tokenize
                     , snowball
                     , leveldb-haskell
                     , temporary
                     , filepath
                     , mtl
                     , store
  default-language:    Haskell2010
  ghc-options:         -Wall

executable papergrep-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , papergrep
                     , mtl
                     , resourcet
  default-language:    Haskell2010

test-suite papergrep-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , papergrep
                     , hspec
                     , conduit
                     , resourcet
                     , strict-data
                     , vector
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/agrafix/papergrep
