name:                papergrep
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/agrafix/papergrep#readme
license:             MIT
author:              Alexander Thiemann
maintainer:          mail@athiemann.net
copyright:           2017 Alexander Thiemann <mail@athiemann.net>
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PG.Xml
                     , PG.Import
                     , PG.Types
                     , PG.Store
                     , PG.Api
                     , PG.Server
  build-depends:       base >= 4.7 && < 5
                     , text
                     , vector
                     , strict-data
                     , bytestring
                     , conduit
                     , resourcet
                     , xml-conduit
                     , xml-types
                     , exceptions
                     , filepath
                     , mtl
                     , hasql
                     , hasql-pool
                     , hasql-transaction
                     , hasql-migration
                     , simple-logger
                     , contravariant
                     , text-utils
                     , errors
                     , random
                     , servant
                     , servant-server
                     , servant-js
                     , hjsmin
                     , warp
                     , http-types
                     , http-media
                     , superrecord
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

executable papergrep-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , papergrep
                     , bytestring
                     , text
                     , simple-logger
  default-language:    Haskell2010

test-suite papergrep-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , papergrep
                     , hspec
                     , conduit
                     , resourcet
                     , strict-data
                     , vector
                     , text
                     , simple-logger
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/agrafix/papergrep
